# nagato-chessengine

./: .gitignore  Cargo.toml  README.md  nagato_vs_stockfish17.1-2500.pgn  results.pgn
src/: bitboard.rs  board.rs  datagen.rs  eval.rs  learn.rs  main.rs  movegen.rs  moves.rs  nnue.rs  search.rs  tablebase.rs  uci.rs  zobrist.rs
src/nnue/: accumulator.rs  features.rs  mod.rs  network.rs
training/: .gitignore  requirements.txt  train.py  verify_weights.py
